<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springaicommunity</groupId>
		<artifactId>spring-ai-agent-utils-parent</artifactId>
		<version>0.13.0-SNAPSHOT</version>
	</parent>

	<artifactId>spring-ai-agent-utils</artifactId>
	<version>0.13.0-SNAPSHOT</version>
	<name>spring-ai-agent-utils</name>
	<description>Spring AI Agent Utilities</description>

	<url>https://github.com/spring-ai-community/spring-ai-agent-utils</url>

	<scm>
		<url>https://github.com/spring-ai-community/spring-ai-agent-utils</url>
		<connection>git://github.com/spring-ai-community/spring-ai-agent-utils.git</connection>
		<developerConnection>git@github.com:spring-ai-community/spring-ai-agent-utils.git</developerConnection>
	</scm>

	<organization>
		<name>Spring AI Community</name>
		<url>https://github.com/spring-ai-community</url>
	</organization>

	<licenses>
		<license>
			<name>Apache License 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Christian Tzolov</name>
		</developer>
	</developers>

	<issueManagement>
		<system>Github Issues</system>
		<url>https://github.com/spring-ai-community/spring-ai-agent-utils/issues</url>
	</issueManagement>
	<ciManagement>
		<system>Github Actions</system>
		<url>https://github.com/spring-ai-community/spring-ai-agent-utils/actions</url>
	</ciManagement>

	<properties>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<spring-ai-session.version>0.7.0</spring-ai-session.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springaicommunity</groupId>
			<artifactId>spring-ai-agent-utils-common</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring-framework.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.ai</groupId>
			<artifactId>spring-ai-client-chat</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Optional: Auto-Dream Phase 2 cross-session recall (AutoDreamService.sessionService(...)).
			Provided + optional — consumers who don't wire session-integrated dreaming
			never pull this in transitively. -->
		<dependency>
			<groupId>org.springaicommunity</groupId>
			<artifactId>spring-ai-session</artifactId>
			<version>${spring-ai-session.version}</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>com.vladsch.flexmark</groupId>
			<artifactId>flexmark-html2md-converter</artifactId>
			<version>${flexmark.version}</version>
		</dependency>


		<!-- Test dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.25.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-observation</artifactId>
			<version>1.12.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.skillsjars</groupId>
			<artifactId>anthropics__skills__pdf</artifactId>
			<version>2026_02_06-1ed29a0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.skillsjars</groupId>
			<artifactId>sivaprasadreddy__sivalabs-agent-skills__spring-boot</artifactId>
			<version>2026_02_23-dba3310</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.ai</groupId>
				<artifactId>spring-ai-bom</artifactId>
				<version>${spring-ai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
